<resources>
    <string name="app_name">Delego</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="formals_details">Lights, Camera, Action! Bring out the bollywood fan in you and put on your dancing shoes. This year at our formal socials, come enjoy our hospitality at the Quint Essential Bollywood Night and revel in an evening of desi tunes, fun games and lots of dancing! Come experience Mumbai in Bollywood style.</string>
    <string name="informals_details">Intense debates during the day and thrilling escapades at night. Here at Mumbai MUN diplomacy prevails all day, but at night its \'Anarchy\'. Join us as we strive to make your experience unparalleled; the perfect blend of both words.</string>
    <string name="delegate_lounge">Unwid from heated committee sessions with Fifa 17, Table Tennis, a guitar or a VR simulation! Adding to your delegate experience, we open to you "The Delegate Lounge".</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="all_members">All members</string>
    <string name="search">Search</string>
    <string name="new_member">New member</string>
    <string name="communicate">Extra</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="id">ID</string>
    <string name="string_age">Age</string>
    <string name="numeric_age">numeric_age</string>
    <string name="user_type">user_type</string>
    <string name="user_type_string">Type</string>
    <string name="numeric_id">numerical_id</string>
    <string name="title_activity_all_users">AllUsers</string>
    <string name="title_activity_delegates_list">DelegatesList</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="delego">Delego</string>
    <string name="delegate_clstr_tech">delegate@clstr.tech</string>
    <string name="title_activity_add_delegate">AddDelegate</string>
    <string name="client_id">354a459c20c185d</string>
    <string name="client_secret">d9d0f25f5e9ff83cfc88105280e10c88246e0eb4</string>
    <string name="name">Name</string>
    <string name="DOB">03/12/1998</string>
    <string name="title_activity_delegate_view">DelegateView</string>
    <string name="committee">Committee</string>
    <string name="country">Country</string>
    <string name="user_role">user_role</string>
    <string name="role">Role</string>
    <string name="user_country">user_country</string>
    <string name="title_delegate_list">Delegates</string>
    <string name="title_delegate_detail">Delegate Detail</string>
    <string name="title_activity_delegate_sort_view">DelegateSortView</string>
    <string name="title_activity_committee_view">CommitteeView</string>
    <string name="title_activity_committee_wise_view">CommitteeWiseView</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="phone">Phone</string>
    <string name="xxxxx_xxxxx">XXXXX XXXXX</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="notif_title">Notifcation Title</string>
    <string name="attendance">Attendance</string>
    <string name="attendance1">Attendance</string>
    <string name="rsvp">RSVP</string>
    <string name="arrived">Arrived</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="number_picker_formatter">%02d</string>
</resources>
