<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qr_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan_qr_code" />
        <item
            android:id="@+id/nav_all_members"
            android:icon="@drawable/account_multiple"
            android:title="@string/all_members" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/account_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/account_multiple_plus"
            android:title="@string/new_member" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

        </menu>
    </item>

</menu>
