<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_checkin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="clstr.delego.UserCheckin">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/id_viewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            app:elevation="2dp">

            <LinearLayout
                android:id="@+id/idLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/id"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/idView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="numeric_id"
                    android:textSize="16sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/type_viewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            app:elevation="2dp">

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/typeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/user_type_string"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/typeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/user_type"
                    android:textSize="16sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/age_viewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:cardCornerRadius="4dp"
            app:elevation="2dp">

            <LinearLayout
                android:id="@+id/ageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="top|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/string_age"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/numeric_age"
                    android:textSize="16sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
