<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="top|center"
    android:padding="8dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/id_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardCornerRadius="2dp"
        android:layout_marginTop="8dp"
        app:elevation="2dp">

        <LinearLayout
            android:id="@+id/idLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="top|center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EEEEEE"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_key"
                    android:id="@+id/imageID" />

                <TextView
                    android:text="@string/numeric_id"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/idView" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/type_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:elevation="0dp">

        <LinearLayout
            android:id="@+id/typeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="top|center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/committee" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EEEEEE"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_star_variant"
                    android:id="@+id/imageView2" />

                <TextView
                    android:text="@string/user_type"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/committeeView" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/country_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:elevation="2dp">

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="top|center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EEEEEE"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/flag"
                    android:id="@+id/imageCountry" />

                <TextView
                    android:text="@string/user_country"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/countryView" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/age_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:elevation="2dp">

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="top|center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#EEEEEE"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/account_check"
                    android:id="@+id/imageRole" />

                <TextView
                    android:text="@string/user_role"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/roleView" />

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>